--- a/profile/index.html
+++ b/profile/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="profile">
 		<h1 id="name">Subhojit Roy</h1>
-		<img src="images/me.JPG" alt="Subhojit Roy" width="550" height="800">
+		<img src="4.JPG" alt="Subhojit Roy" width="550" height="800">
 		<p>At my profile, you can find this:</p>
 		<ul> 
       		<li><a href="https://www.facebook.com/dreamboy.subho.58/about?lst=100003152595915%3A100003152595915%3A1526757610" target="-blank">About me</a></li>
@@ -45,12 +45,6 @@
 			<br>“There’s no next time. It’s now or never.”
 			<br>"**Success is when your signature turns into autograph.**"</p>
 		</div>
-    	<h1>Picture</h1>
-    	<img src="images/1.JPG" alt="Subhojit Roy" width="350" height="500">
-    	<img src="images/3.JPG" alt="Subhojit Roy" width="370" height="500">
-    	<img src="images/4.JPG" alt="Subhojit Roy" width="350" height="500">
-    	<img src="images/2.JPG" alt="Subhojit Roy" width="500" height="500">
-    	
 	</div>
 	<h1>Friends</h1>
     <ol>
