--- a/profile/index.html
+++ b/profile/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1 id="name">Subhojit Roy</h1>
-	<img src="4.jpeg" alt="Subhojit Roy" width="400" height="600">
+	<img src="4.jpg" alt="Subhojit Roy" width="400" height="600">
 	<div id="profile">
 		<p>At my profile, you can find this:</p>
 		<ul> 
